# GitActions_Python

./: README.md  init_setup.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  python-app.yml
