[metadata]
license = MIT
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
install_requires = 
    ensure==1.0.4
    py-youtube==1.1.7
python_requires = >=3.10

[options.extras_require]
testing =
    pytest>=8.2.1
    mypy>=1.10.0
    flake8>=7.0.0
    tox>=4.15.0
    black>=24.4.2

[options.package_data]
IPYNBrenderer = py.typed

[flake8]
max-line-length = 160
exclude = __init__.py
